--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="17dp"
         android:layout_marginEnd="13dp"
-        android:background="@color/black"
+        android:background="#00332424"
         app:srcCompat="@drawable/baseline_settings_24" />
 
 
