--- a/app/src/main/res/layout/activity_phone_game.xml
+++ b/app/src/main/res/layout/activity_phone_game.xml
@@ -13,8 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="31dp"
-        android:text="TextView" />
+        android:layout_marginStart="206dp"
+        android:layout_marginTop="85dp"
+        android:text=""
+        android:textColor="#050505"
+        android:textSize="60sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,33 +26,38 @@
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:weightSum="6">
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1."
             android:padding="2dp"
-            app:cardElevation="10dp"
-            >
+            app:cardBackgroundColor="#757272"
+            app:cardElevation="10dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="4">
+
                 <TextView
                     android:id="@+id/txtphone"
                     android:layout_width="0dp"
-                    android:textSize="40sp"
-                    android:textStyle="bold"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:background="#005C63"
                     android:text=""
                     android:textColor="#000"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3">
-                </TextView>
+                    android:textSize="40sp"
+                    android:textStyle="bold"></TextView>
+
                 <ImageButton
                     android:id="@+id/delbtn"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:backgroundTint="#00404040"
                     android:src="@drawable/backspace">
 
                 </ImageButton>
@@ -65,7 +74,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:weightSum="4">
+                android:weightSum="4"
+                android:background="#005C63">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -81,30 +91,33 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:backgroundTint="#7A7777"
                             android:text="1"
-                            android:textStyle="bold"
-                            android:textSize="40sp">
-                        </Button>
+                            android:textColor="#FFFFFF"
+                            android:textSize="40sp"
+                            android:textStyle="bold"></Button>
 
                         <Button
                             android:id="@+id/b2"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:backgroundTint="#7A7777"
+                            android:textColor="#FFFFFF"
                             android:text="2"
-                            android:textStyle="bold"
-                            android:textSize="40sp">
-                        </Button>
+                            android:textSize="40sp"
+                            android:textStyle="bold"></Button>
 
                         <Button
                             android:id="@+id/b3"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:backgroundTint="#7A7777"
+                            android:textColor="#FFFFFF"
                             android:text="3"
-                            android:textStyle="bold"
-                            android:textSize="40sp">
-                        </Button>
+                            android:textSize="40sp"
+                            android:textStyle="bold"></Button>
 
                     </LinearLayout>
 
@@ -124,30 +137,33 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="#7A7777"
+                        android:textColor="#FFFFFF"
                         android:text="4"
-                        android:textStyle="bold"
-                        android:textSize="40sp">
-                    </Button>
+                        android:textSize="40sp"
+                        android:textStyle="bold"></Button>
 
                     <Button
                         android:id="@+id/b5"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="#7A7777"
+                        android:textColor="#FFFFFF"
                         android:text="5"
-                        android:textStyle="bold"
-                        android:textSize="40sp">
-                    </Button>
+                        android:textSize="40sp"
+                        android:textStyle="bold"></Button>
 
                     <Button
                         android:id="@+id/b6"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="#7A7777"
+                        android:textColor="#FFFFFF"
                         android:text="6"
-                        android:textStyle="bold"
-                        android:textSize="40sp">
-                    </Button>
+                        android:textSize="40sp"
+                        android:textStyle="bold"></Button>
 
                 </LinearLayout>
 
@@ -167,30 +183,33 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:backgroundTint="#7A7777"
+                            android:textColor="#FFFFFF"
                             android:text="7"
-                            android:textStyle="bold"
-                            android:textSize="40sp">
-                        </Button>
+                            android:textSize="40sp"
+                            android:textStyle="bold"></Button>
 
                         <Button
                             android:id="@+id/b8"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:backgroundTint="#7A7777"
+                            android:textColor="#FFFFFF"
                             android:text="8"
-                            android:textStyle="bold"
-                            android:textSize="40sp">
-                        </Button>
+                            android:textSize="40sp"
+                            android:textStyle="bold"></Button>
 
                         <Button
                             android:id="@+id/b9"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:backgroundTint="#7A7777"
+                            android:textColor="#FFFFFF"
                             android:text="9"
-                            android:textStyle="bold"
-                            android:textSize="40sp">
-                        </Button>
+                            android:textSize="40sp"
+                            android:textStyle="bold"></Button>
 
                     </LinearLayout>
 
@@ -210,30 +229,33 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:backgroundTint="#7A7777"
+                            android:textColor="#FFFFFF"
                             android:text="*"
-                            android:textStyle="bold"
-                            android:textSize="40sp">
-                        </Button>
+                            android:textSize="40sp"
+                            android:textStyle="bold"></Button>
 
                         <Button
                             android:id="@+id/b0"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:backgroundTint="#7A7777"
+                            android:textColor="#FFFFFF"
                             android:text="0"
-                            android:textStyle="bold"
-                            android:textSize="40sp">
-                        </Button>
+                            android:textSize="40sp"
+                            android:textStyle="bold"></Button>
 
                         <Button
                             android:id="@+id/bhash"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:backgroundTint="#7A7777"
+                            android:textColor="#FFFFFF"
                             android:text="#"
-                            android:textStyle="bold"
-                            android:textSize="40sp">
-                        </Button>
+                            android:textSize="40sp"
+                            android:textStyle="bold"></Button>
 
                     </LinearLayout>
 
@@ -245,16 +267,26 @@
 
         <Button
             android:id="@+id/bcall"
-            android:layout_width="match_parent"
+            android:layout_width="284dp"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
             android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:backgroundTint="#499B54"
+            android:textColor="#FFFFFF"
             android:text="Call"
-            android:textSize="35sp"
-            android:background="@android:color/holo_green_light">
+            android:textSize="35sp">
 
         </Button>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter your parents' phone number"
+        android:textColor="#000000"
+        android:textSize="34sp" />
 
 </RelativeLayout>
