--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -124,4 +124,18 @@
         app:strokeWidth="2dp"
         tools:layout_editor_absoluteY="493dp" />
 
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Home"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Log Out"
+        app:backgroundTint="#004B51"
+        app:iconPadding="8dp"
+        app:strokeColor="#00FFEE"
+        app:strokeWidth="2dp"
+        android:layout_marginBottom="16dp" />
+
 </RelativeLayout>
