--- a/app/src/main/res/layout/activity_name_game.xml
+++ b/app/src/main/res/layout/activity_name_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#005C63">
+    android:background="#274c43">
 
     <TextView
         android:id="@+id/UserName"
@@ -15,7 +15,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="67dp"
         android:text=""
-        android:textColor="#000000"
+        android:fontFamily="@font/chalk"
+        android:textColor="#FFFFFF"
         android:textSize="34sp"
         android:textStyle="bold" />
 
@@ -26,9 +27,10 @@
         android:layout_below="@+id/UserName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="64dp"
+        android:fontFamily="@font/chalk"
         android:text="Type the name you see:"
         android:textAllCaps="false"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -38,10 +40,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="225dp"
+        android:layout_marginTop="231dp"
         android:ems="10"
+        android:fontFamily="@font/chalk"
         android:inputType="textPersonName"
-        android:text=""/>
+        android:text=""
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/check"
@@ -50,10 +54,11 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="301dp"
+        android:fontFamily="@font/chalk"
         android:text="Check Answer"
-        app:backgroundTint="#004B51"
+        app:backgroundTint="#00510000"
         app:iconPadding="8dp"
-        app:strokeColor="#00FFEE"
-        app:strokeWidth="2dp"/>
+        app:strokeColor="#FFFFFF"
+        app:strokeWidth="2dp" />
 
 </RelativeLayout>
