--- a/app/src/main/res/layout/activity_phone_game.xml
+++ b/app/src/main/res/layout/activity_phone_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#005C63">
+    android:background="#274c43">
 
     <TextView
         android:id="@+id/UserNum"
@@ -16,7 +16,8 @@
         android:layout_marginStart="206dp"
         android:layout_marginTop="85dp"
         android:text=""
-        android:textColor="#050505"
+        android:fontFamily="@font/chalk"
+        android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold" />
 
@@ -46,10 +47,11 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="3"
-                    android:background="#005C63"
+                    android:background="#274c43"
                     android:text=""
-                    android:textColor="#000"
-                    android:textSize="40sp"
+                    android:textSize="35sp"
+                    android:fontFamily="@font/chalk"
+                    android:textColor="#FFFFFF"
                     android:textStyle="bold"></TextView>
 
                 <ImageButton
@@ -75,7 +77,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:weightSum="4"
-                android:background="#005C63">
+                android:background="#274c43">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -285,8 +287,9 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/chalk"
         android:text="Enter your parents' phone number"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="34sp" />
 
 </RelativeLayout>
