--- a/app/src/main/res/layout/activity_addr_game.xml
+++ b/app/src/main/res/layout/activity_addr_game.xml
@@ -8,6 +8,19 @@
     android:background="#274c43">
 
     <TextView
+        android:id="@+id/timerTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="10dp"
+        android:text="Time: 00:00"
+        android:textSize="20sp"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/chalk" />
+
+    <TextView
         android:id="@+id/Address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
