--- a/app/src/main/res/layout/activity_name_game.xml
+++ b/app/src/main/res/layout/activity_name_game.xml
@@ -47,6 +47,18 @@
         android:text=""
         android:textColor="#FFFFFF" />
 
+    <TextView
+        android:id="@+id/timerTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="300dp"
+        android:fontFamily="@font/chalk"
+        android:text="Time remaining: 180s"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
+
     <Button
         android:id="@+id/check"
         android:layout_width="wrap_content"
