--- a/app/src/main/res/layout/activity_phone_game.xml
+++ b/app/src/main/res/layout/activity_phone_game.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="#274c43">
+    <TextView
+        android:id="@+id/timerTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="45dp"
+        android:text="Time: 00:00"
+        android:textSize="20sp"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/chalk" />
 
     <TextView
         android:id="@+id/UserNum"
@@ -290,6 +302,6 @@
         android:fontFamily="@font/chalk"
         android:text="Enter your parents' phone number"
         android:textColor="#FFFF"
-        android:textSize="34sp" />
+        android:textSize="28sp" />
 
 </RelativeLayout>
